--- a/src/projectConfig.json
+++ b/src/projectConfig.json
@@ -1,5 +1,5 @@
 {
   "test": "3",
-  "contractName": "dev-1645375679480-43401190499657",
-  "admin": "daorecords.testnet"
+  "contractName": "dev-1646768562393-54482198873294",
+  "admin": "optr.testnet"
 }
