--- a/src/projectConfig.json
+++ b/src/projectConfig.json
@@ -1,5 +1,5 @@
 {
   "test": "3",
-  "contractName": "dev-1649754387404-72172315861797",
-  "admin": "crans.testnet"
+  "contractName": "fono-root.optr.near",
+  "admin": "daorecords.near"
 }
