--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "react-simple-maps": "0.11.1",
     "react-toastify": "^8.1.0",
     "regenerator-runtime": "~0.13.5",
-    "uint8arrays": "^3.0.0"
+    "uint8arrays": "^3.0.0",
+    "@material-ui/core": "^3.8.1",
+    "@material-ui/icons": "^3.0.1"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
