--- a/package.json
+++ b/package.json
@@ -34,28 +34,20 @@
     "shelljs": "~0.8.4"
   },
   "dependencies": {
-    "@crustio/crust-pin": "^1.0.0",
     "axios": "^0.26.1",
     "crypto-js": "^4.1.1",
     "cuid": "^2.1.8",
     "debounce": "^1.2.1",
-    "ipfs-core": "^0.12.2",
-    "it-all": "^1.0.4",
     "near-api-js": "~0.43.1",
     "react": "~17.0.1",
     "react-dom": "~17.0.1",
-    "react-draggable": "^4.4.4",
     "react-dropzone": "^11.5.1",
-    "react-globe.gl": "^2.22.0",
     "react-motion": "0.5.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "1.1.0",
-    "react-simple-maps": "0.11.1",
     "react-toastify": "^8.1.0",
     "regenerator-runtime": "~0.13.5",
-    "uint8arrays": "^3.0.0",
-    "@material-ui/core": "^3.8.1",
-    "@material-ui/icons": "^3.0.1"
+    "uint8arrays": "^3.0.0"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
