Adds copy function to the contract (migration)

--- a/src/projectConfig.json
+++ b/src/projectConfig.json
@@ -1,5 +1,5 @@
 {
   "test": "3",
-  "contractName": "fono-root.optr.near",
-  "admin": "daorecords.near"
+  "contractName": "dev-1655131247537-47252733792738",
+  "admin": "optr.testnet"
 }
