--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "express-fileupload": "^1.3.1"
+    "express-fileupload": "^1.3.1",
+    "near-api-js": "^1.0.0",
+    "pg": "^8.8.0",
+    "sharp": "^0.30.7"
   }
 }
