--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "crypto-js": "^4.1.1",
     "cuid": "^2.1.8",
     "debounce": "^1.2.1",
+    "moment": "^2.29.4",
     "near-api-js": "~0.43.1",
     "react": "~17.0.1",
     "react-dom": "~17.0.1",
